[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "symformer"
version = "0.1.0"
description = "Universal Symmetry-Aware Medical Segmentation for CT/MRI"
requires-python = ">=3.10"
dependencies = [
    "torch>=2.0.0",
    "torchvision>=0.15.0",
    "numpy>=1.24.0",
    "scikit-learn>=1.2.0",
    "scikit-image>=0.21.0",
    "scipy>=1.10.0",
    "nibabel>=5.1.0",
    "pydicom>=2.3.0",
    "SimpleITK>=2.2.0",
    "opencv-python>=4.8.0",
    "albumentations>=1.3.0",
    "monai>=1.1.0",
    "wandb>=0.15.0",
    "matplotlib>=3.7.0",
    "seaborn>=0.12.0",
    "pandas>=2.0.0",
    "pyyaml>=6.0",
    "tqdm>=4.65.0",
    "torchinfo>=1.8.0",
    "torchmetrics>=1.0.0",
    "einops>=0.6.0",
    "causal-conv1d>=1.1.0",
    "mamba-ssm>=2.0.0",
]

[project.scripts]
symformer-train = "symformer.scripts.train:main"
symformer-evaluate = "symformer.scripts.evaluate:main"

[tool.setuptools.packages.find]
include = ["models*", "datasets*", "training*", "evaluation*", "utils*", "scripts*", "configs*", "preprocessing*"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]

[tool.mypy]
python_version = "3.10"
ignore_missing_imports = true
